favicon and sync load

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-  <meta                                                  charset = "UTF-8">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico"><meta                                                  charset = "UTF-8">
                                                                 <title>
 Contact Us - The Best UI Company</title><div></div>
 <style>
