--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BluePulse - the Ocean in each one of Us</title>
   <link rel="stylesheet" href="./style.css"/>
+  <link rel="icon" href="./favicon.ico">
 </head>
 <body>
     <canvas id="threejs-canvas"></canvas>
@@ -56,6 +57,8 @@
 
     const raycaster = new THREE.Raycaster();
     const mouse = new THREE.Vector2();
+    let envReady = false;
+    let humanReady = false;
 
     const textureLoader = new THREE.TextureLoader();
     const normalMap = textureLoader.load('https://cdn.jsdelivr.net/gh/mrdoob/three.js@r154/examples/textures/waternormals.jpg');
@@ -68,8 +71,10 @@
       './water/skybox/nightsky_up.png',
       './water/skybox/nightsky_dn.png',
       './water/skybox/nightsky_ft.png',
-      './water/skybox/nightsky_bk.png'
-    ]);
+      './water/skybox/nightsky_bk.png',
+    ], ()=>{
+        envReady = true;
+    });
     scene.background = environmentMap;
 
     const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
@@ -126,6 +131,7 @@
                     scene.add(humanMesh);
                 }
             });
+            humanReady = true;
         }, undefined, (error) => {
         console.error('An error occurred while loading the model:', error);
     });
@@ -137,6 +143,7 @@
             modelScene.position.set(0, 0, 0);
             modelScene.scale.set(1, 1, 1);
             model.ref = modelScene;
+            model.ready = true;
             scene.add(modelScene);
         }, undefined, (error) => {
             console.error('An error occurred while loading the model:', error);
@@ -239,7 +246,9 @@
       controls.update();
       renderer.render(scene, camera);
       const CINEMATIC_RATE = 0.008;
-      cinematicBlend = lerp(cinematicBlend, 1, CINEMATIC_RATE);
+      if (humanReady && envReady && Models.every(model => model.ready)) {
+        cinematicBlend = lerp(cinematicBlend, 1, CINEMATIC_RATE);
+      }
       cinematicEnded = (cinematicBlend > 0.999)
       if (!cinematicEnded) {
         camera.position.lerp(cameraTarget, CINEMATIC_RATE);
